--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EngVantage - Learning English Made Fun</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8fafc;
-    }
-  </style>
-<script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
-  }
-}
-</script>
+  <meta charset="UTF-8" />
+  <title>Gemini 測試</title>
 </head>
 <body>
-  <div id="root"></div>
+
+<h2>Gemini API（透過 Render 中繼）</h2>
+
+<textarea id="prompt" rows="4" cols="50">
+請用一句話介紹台灣
+</textarea>
+<br><br>
+
+<button onclick="callGemini()">送出</button>
+
+<pre id="output"></pre>
+
+<script>
+async function callGemini() {
+  const prompt = document.getElementById("prompt").value;
+
+  const res = await fetch("https://startulip.onrender.com", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ prompt })
+  });
+
+  const data = await res.json();
+
+  const text =
+    data.candidates?.[0]?.content?.parts?.[0]?.text || "沒有回應";
+
+  document.getElementById("output").innerText = text;
+}
+</script>
+
 </body>
 </html>
