--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EngVantage - AI 英文單字學習</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- 使用 UnoCSS Runtime，支援所有 Tailwind 語法且更適合正式環境 -->
+  <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; background-color: #f8fafc; margin: 0; padding: 0; }
+    /* 防止元件渲染前的閃爍 */
+    [v-cloak] { display: none; }
   </style>
   <script type="importmap">
 {
